--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,95 +1,17 @@
-$primary-color: bisque;
-$accent-color: #FB9800;
-$bg-color: #FBEB00;
-$text-color: #ddd;
-
 * {
-	font-family: Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 }
-
-h1 {
-	font-size: 300px;
-	text-align: center;
-	color: fuchsia;
+.bio{
+	border: solid blue 3px;
+	padding-left: 20px;
+	background-color: grey;
 }
-
-button, input, li {
-	font-size: 2rem;
-	padding: .5rem 1rem;
-	outline: none;
+.title{
+	width: 60%;
+	padding-left: 3rem;
 }
-
-button, li,span {
-	color: $text-color;
-}
-
-li {
-	list-style: none;
-	text-align: left;
-	background: lighten($primary-color,20);
-	margin: 1rem 0;
-}
-
-ul {
-	padding: 0;
-	margin: 1rem 0;
-}
-
-input[type="text"]:focus {
-	outline: 3px solid $accent-color;
-	transition: .1s all ease;
-}
-body {
-	background: lighten($primary-color,20);
-}
-
-.todo-app {
-	max-width: 900px;
-	margin: 10% auto;
-	text-align: center;
-
-	.buttons {
-		button,button:focus {
-			border: 3px solid $accent-color;
-			border-bottom: none;
-			background: $primary-color;
-			margin: 0 1rem;
-			margin-bottom: -3px;
-			cursor: pointer;
-		}
-
-		button.active {
-			border-bottom: 3px solid $primary-color;
-		}
-	}
-
-	.todo-list {
-		border: 3px solid $accent-color;
-		background: $primary-color;
-		padding: 2rem;
-
-		ul {
-			li {
-				position: relative;
-				span {
-					line-height: 2rem;
-					display: inline-block;
-				}
-				span.checkbox {
-					position: absolute;
-					right: 1rem;
-					text-align: center;
-					width: 2rem;
-					height: 2rem;
-					border: 4px solid $accent-color;	
-					color: $accent-color;	
-					cursor: pointer;			
-				}
-				span.text {
-					left: 1rem;
-				}
-			}
-		}
-	}
+.link{
+	padding-left: 3rem;
+	padding-right: 2rem;
+	left: 50px
 }
